fix bug content not showing after div in div hierarchy with scrollbars

--- a/assets/examples/base.css
+++ b/assets/examples/base.css
@@ -30,7 +30,7 @@ body {
 .test4 {
     background: #4e7b9f;
     width: 350px;
-    height: 400px;
+    height: 180px;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -40,8 +40,8 @@ body {
 
 .test5 {
     background: #ff5656;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
@@ -52,6 +52,16 @@ body {
     background: #7799ce;
     width: 160px;
     height: 160px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
+
+.test7 {
+    background: #00ff8c;
+    width: 140px;
+    height: 140px;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
